# Visualize-A-shares

./: .env.example  .env.production.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  ROADMAP.md  TODO.md  _test_hist_speed.py  _test_hist_speed2.py  docker-compose.prod.yml  docker-compose.yml  pytest.ini
backend/: .dockerignore  Dockerfile  auth.py  config.py  main.py  pyproject.toml
backend/api/: __init__.py
backend/api/routes/: analysis.py  chat.py  debate.py
backend/engine/agent/: __init__.py  backtest.py  brain.py  chat.py  chat_routes.py  data_hunger.py  db.py  decision_quality.py  demo_scenarios.py  execution.py  memory.py  models.py  review.py  routes.py  scheduler.py  service.py  state.py  strategy_action_routes.py  strategy_actions.py  validator.py  verification.py
backend/engine/arena/: __init__.py  aggregator.py  data_fetcher.py  debate.py  judge.py  memory.py  orchestrator.py  personas.py  runner.py  schemas.py  target_resolver.py
backend/engine/cluster/: __init__.py  engine.py  routes.py  schemas.py
backend/engine/data/: asset_resolver.py  collector.py  engine.py  market_types.py  precomputed.py  routes.py  schemas.py  store.py
backend/engine/expert/: __init__.py  agent.py  data_validator.py  engine_experts.py  intent.py  knowledge_graph.py  tools.py  (+8 more)
backend/llm/: __init__.py  capability.py  config.py  context_guard.py  providers.py
backend/mcpserver/: __init__.py  __main__.py  agent_backtest.py  agent_http.py  agent_verification.py  agent_verification_suite.py  data_access.py  formatters.py  server.py  tools.py
(+639 files in other folders)
